added build kits code, lots of bug fixes, lot of code cleanup, some look changes